# MonzoForSlack

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  manifest.yml  pyproject.toml
abd/: __main__.py
abd/utils/: env.py  logging.py  slack.py  starlette.py
abd/utils/monzo/: checker.py  handler.py  types.py
